--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,22 +1,16 @@
-<h1>Public Welcome</h1>
+<h1>Welcome to e-Breaux</h1>
 
-<div id="fb-root"></div>
-<fb:profile-pic uid="" size="normal" facebook-logo="true"></fb:profile-pic>
-<script src="http://connect.facebook.net/en_US/all.js"></script>
-<script>
-   FB.init({ 
-      appId:'137544799663380', cookie:true, 
-      status:true, xfbml:true 
-   });
-</script>
-<fb:login-button onlogin="location.href = '/welcome/about'"  perms="email,publish_stream" >Login with Facebook</fb:login-button>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla suscipit, leo ac bibendum mattis, leo leo volutpat orci, vitae viverra diam sapien a magna. Suspendisse a erat ut tellus aliquet aliquet ultricies vitae turpis. Integer id turpis risus. Pellentesque commodo, neque ut luctus dapibus, dolor dui scelerisque diam, ut dignissim dui neque sed enim. </p> 
 
 
-<%
-fb_auth = FbGraph::Auth.new("137544799663380", "a86904195a7b41d06f018cd8d9e32dd1")
-
-# user = FbGraph::User.me(fb_auth.access_token).fetch
-
-%>
-
-<%= fb_auth.authorized? %>
+<div id="login-container">
+  <div id="fb-root"></div>
+  <script src="http://connect.facebook.net/en_US/all.js"></script>
+  <script>
+     FB.init({ 
+        appId:'137544799663380', cookie:true, 
+        status:true, xfbml:true 
+     });
+  </script>
+  <fb:login-button onlogin="location.href = '/facebooks/show'"  perms="email,publish_stream" >Login with Facebook</fb:login-button>
+</div>
