--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,15 @@
 <html>
 <head>
   <title>EBreaux</title>
-  <%= stylesheet_link_tag :all %>
+  <%= stylesheet_link_tag :all, :global %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
 </head>
 <body>
+
+<div id="header">
+  <a href="/"><img src="/images/e-breaux-icon.gif" width="99" height="98" alt="E Breaux Icon"></a>
+</div>
 
 <%= yield(:content) %>
 
