--- a/app/views/layouts/authenticated.html.erb
+++ b/app/views/layouts/authenticated.html.erb
@@ -4,7 +4,7 @@
   <div id="subnav">
     <ul>
       <li><%= link_to "Dashboard", dashboard_url %></li>
-      <li><%= link_to "Targets", "/" %></li>
+      <li><%= link_to "Targets", targets_url %></li>
     </ul>
   </div>
   <%= yield %>
