periodic commit; working code

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,5 +12,5 @@
         status:true, xfbml:true 
      });
   </script>
-  <fb:login-button onlogin="location.href = '/facebooks/show'"  perms="email,publish_stream" >Login with Facebook</fb:login-button>
+  <fb:login-button onlogin="location.href = '/facebooks/show'"  perms="email,publish_stream,read_stream" >Login with Facebook</fb:login-button>
 </div>
