--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,20 @@
 <h1>Dashboard Home</h1>
 
+<%
+
+# *** scan for new posts ***
+subscriptions = Subscription.all
+subscriptions.each {|s|
+  
+}
+
+# *** schedule responses ***
+
+
+
+
+%>
+
 
 <%= render "recent_activity" %>
 
