adds querying for pending, upcoming, posted responses

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Dashboard Home</h1>
 
+<%= Response.scheduled.count %>
+
 <%= render "recent_activity" %>
 
 <%= render "scheduled_responses" %>
